--- a/main.css
+++ b/main.css
@@ -30,20 +30,37 @@ h1 {
 }
 
 /* ----------Profile Card CSS---------- */
+.profile-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  justify-items: center;
+  align-items: stretch;
+}
 
 .profile-card {
   background: white;
   border: 1px solid #ddd;
-  box-shadow: 0 5px 10px #f7cbfa;
+  box-shadow: 0 10px 40px #f7cbfa;
   padding: 20px;
   margin: 20px;
   min-width: 360px;
+  max-width: 360px;
   border-radius: 21px;
   text-align: center;
+  flex: 1;
+}
+
+/* -------For desktop Screens--------- */
+@media (min-width: 1199px) {
+  .profile-card {
+    flex: 0 0 28px;
+  }
 }
 
 .profile-card img {
   border-radius: 50%;
+  padding: 10px;
 }
 
 .profile-card h3 {
@@ -56,19 +73,6 @@ h1 {
   color: lightslategray;
 }
 
-/* -------For desktop Screens--------- */
-@media (min-width: 1199px) {
-  .profile-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 20px;
-    margin: 20px;
-  }
-  .profile-card {
-    max-width: 600px;
-    margin: 0px;
-  }
-}
 /* Footer Section */
 footer {
   background-color: #333; /* Dark background color */
