--- a/main.css
+++ b/main.css
@@ -24,7 +24,12 @@ h1 {
 }
 
 /* ----------Profile Card CSS---------- */
-
+.profile-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-items: center;
+  justify-content: center;
+}
 .profile-card {
   background: white;
   border: 1px solid #ddd;
@@ -35,14 +40,6 @@ h1 {
   max-width: 360px;
   border-radius: 21px;
   text-align: center;
-  flex: 1;
-}
-
-/* -------For desktop Screens--------- */
-@media (min-width: 1199px) {
-  .profile-card {
-    flex: 0 0 28px;
-  }
 }
 
 .profile-card img {
@@ -60,21 +57,8 @@ h1 {
   color: lightslategray;
 }
 
-
-
 /* -------For desktop Screens--------- */
 @media (min-width: 1199px) {
-  .profile-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 20px;
-    margin: 20px;
-  }
-
-  .profile-card {
-    max-width: 600px;
-    margin: 0px;
-  }
   .nav-links {
     display: flex;
   }
