--- a/main.css
+++ b/main.css
@@ -18,8 +18,7 @@ body {
 
 /* ----------Nav Styles---------------- */
 .navbar {
-  display: flex;
-  justify-content: space-between; /* Align items to the start (left) */
+  display: flex; /* Align items to the start (left) */
   align-items: center;
   background-color: #333;
   padding: 10px 20px;
@@ -27,13 +26,8 @@ body {
 
 .nav-links {
   list-style: none;
-  display: flex;
   margin: 0;
   padding: 0;
-}
-
-.nav-links li {
-  margin: 0 10px;
 }
 
 nav {
@@ -111,8 +105,6 @@ h1 {
   line-height: 1.5;
   color: lightslategray;
 }
-
-
 
 /* -------For desktop Screens--------- */
 @media (min-width: 1199px) {
