--- a/main.css
+++ b/main.css
@@ -20,7 +20,6 @@ body {
   padding: 0;
 }
 
-
 nav {
   background-color: #f7cbfa;
 }
@@ -54,6 +53,7 @@ h1 {
   padding: 20px;
   margin: 20px;
   min-width: 360px;
+  max-width: 360px;
   border-radius: 21px;
   text-align: center;
 }
@@ -81,21 +81,20 @@ h1 {
   .hamburger {
     display: none;
 
-  .profile-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 20px;
-    margin: 20px;
-  }
+    .profile-container {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-gap: 20px;
+      margin: 20px;
+    }
 
-  .profile-card {
-    max-width: 600px;
-    margin: 0px;
-
+    .profile-card {
+      max-width: 600px;
+      margin: 0px;
+    }
   }
 }
-
-/* Footer Section */
+/* ----------Footer Section---------- */
 footer {
   background-color: #333; /* Dark background color */
   color: #fff; /* Light text color */
